<resources>
  <string name="app_name">LTC BOOST</string>
  <string name="logo">Logo</string>
  <string name="login_account">Login Account</string>
  <string name="version">Version</string>
  <string name="username">Username</string>
  <string name="password">password</string>
  <string name="log_in">Log In</string>
  <string name="don_t_have_account">Don\'t have account ?</string>
  <string name="register">REGISTER</string>
  <string name="name">Name</string>
  <string name="email">Email</string>
  <string name="phone">Phone</string>
  <string name="whatsapp">Whatsapp</string>
  <string name="confirmation_password">Confirmation Password</string>
  <string name="secondary_password">Secondary Password</string>
  <string name="confirmation_secondary_password">Confirmation Secondary Password</string>
  <string name="do_you_have_account">Do you have account ?</string>
  <string name="icon">Icon</string>
  <string name="home">Home</string>
  <string name="info">Info</string>
  <string name="setting">Setting</string>
  <string name="dollar_example">$ 100</string>
  <string name="notification">Notification</string>
  <string name="upgrade_lot">Upgrade Account</string>
  <string name="register_account">Register Account</string>
  <string name="change_password">Edit Password</string>
  <string name="change_second_password">Edit Secondary Password</string>
  <string name="change_phone">Edit Phone Number</string>
  <string name="logout">Logout</string>
  <string name="history_doge">History LTC</string>
  <string name="example_doge">99999.99999999</string>
  <string name="sponsor">Sponsor</string>
  <string name="stake">Stake</string>
  <string name="fund">Fund</string>
  <string name="amount">Amount</string>
  <string name="old_password">Old Password</string>
  <string name="new_password">New Password</string>
  <string name="reenter_new_password">Confirm New Password</string>
  <string name="new_password_key">New Secondary Password</string>
  <string name="reenter_new_password_key">Confirm New Secondary Password</string>
  <string name="generic_submit">Submit</string>
  <string name="balance">Balance</string>
  <string name="wallet">Wallet</string>
  <string name="walletDogeBug">Wallet Boost</string>
  <string name="zero">0</string>
  <string name="date">Date</string>
  <string name="description">Description</string>
  <string name="income">Description</string>
  <string name="outcome">Description</string>
  <string name="total">Total</string>
  <string name="my_team">My Team</string>
  <string name="network">Network</string>
  <string name="withdrawal">Withdrawal</string>
  <string name="history_bonus">History Bonus</string>
  <string name="new_app">New APP</string>
  <string name="registering_new_members">Registering new members</string>
  <string name="top_up">Top Up</string>
  <string name="update_profile">Update Profile</string>
  <string name="press_logo_to_open_barcode_scan">press logo to open barcode scan</string>
  <string name="send">Send</string>
  <string name="bonus">Bonus</string>
  <string name="withdraw">Withdraw</string>
  <string name="get">Get</string>
  <string name="ration">Ration</string>
  <string name="history_boge">History Boost</string>
  <string name="share">Share</string>
  <string name="dig">Dig</string>
  <string name="description_upgrade">Top up requires 50% LTC and 50% Boost, will be taken from your wallet balance.</string>
  <string name="already_have_an_account">Already have an account ?</string>
  <string name="send_email">Send email</string>
  <string name="forgot_password">Forgot password</string>
  <string name="pulse">+</string>
  <string name="wallet_ltc_boost">Wallet LTC Boost</string>
  <string name="balance_ltc">Balance LTC</string>
  <string name="balance_boost">Balance Boost</string>
  <string name="level">Level</string>
  <string name="decentralized_info">Decentralized Info</string>
  <string name="total_trx">Total TRX</string>
  <string name="ltc_balance">LTC Balance</string>
  <string name="boost_balance">Boost Balance</string>
  <string name="ltc_withdraw">LTC Withdraw</string>
  <string name="boost_withdraw">Boost Withdraw</string>
  <string name="daily_pool">Daily Pool</string>
  <string name="top_referrer">Top Referrer</string>
  <string name="personal_info">Personal Info</string>
</resources>