<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ForgotPasswordActivity"
    android:background="@color/colorSecondary">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:gravity="center">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="70dp"/>

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:srcCompat="@drawable/logo_dark"
        android:contentDescription="@string/logo"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/card"
        android:padding="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:elevation="10dp">

      <TextView
          android:text="@string/forgot_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/textPrimary"
          android:textStyle="bold"
          android:textSize="20sp"
          android:gravity="center"/>

      <Space
          android:layout_width="wrap_content"
          android:layout_height="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textEmailAddress"
          android:ems="10"
          android:id="@+id/editTextEmail"
          android:background="@drawable/edit_text"
          android:gravity="center"
          android:hint="@string/email"
          android:autofillHints="@string/username"/>

      <Space
          android:layout_width="wrap_content"
          android:layout_height="25dp"/>

      <Button
          android:text="@string/send_email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/buttonSend"
          android:background="@drawable/button"/>

      <Space
          android:layout_width="wrap_content"
          android:layout_height="10dp"/>

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="35dp"/>

    <TextView
        android:text="@string/already_have_an_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/White"/>

    <TextView
        android:text="@string/log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:id="@+id/textVIewLogin"/>

  </LinearLayout>

</ScrollView>