<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AuthRegisterActivity"
    android:background="@color/colorSecondary">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:gravity="center">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="30dp"/>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/logo_dark"
        android:contentDescription="@string/logo"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/card"
        android:padding="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:elevation="10dp">

      <TextView
          android:text="@string/registering_new_members"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/textPrimary"
          android:textStyle="bold"
          android:textSize="18sp"
          android:gravity="center"/>

      <Space
          android:layout_width="wrap_content"
          android:layout_height="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPersonName"
          android:ems="10"
          android:id="@+id/editTextName"
          android:hint="@string/name"
          android:background="@drawable/edit_text"
          android:gravity="center"
          android:importantForAutofill="no"/>

      <Space
          android:layout_width="wrap_content"
          android:layout_height="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPersonName"
          android:ems="10"
          android:id="@+id/editTextUsername"
          android:hint="@string/username"
          android:background="@drawable/edit_text"
          android:gravity="center"
          android:importantForAutofill="no"/>

      <Space
          android:layout_width="wrap_content"
          android:layout_height="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textEmailAddress"
          android:ems="10"
          android:id="@+id/editTextEmail"
          android:hint="@string/email"
          android:background="@drawable/edit_text"
          android:gravity="center"
          android:importantForAutofill="no"/>

      <Space
          android:layout_width="wrap_content"
          android:layout_height="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="phone"
          android:ems="10"
          android:id="@+id/editTextPhone"
          android:hint="@string/phone"
          android:background="@drawable/edit_text"
          android:gravity="center"
          android:importantForAutofill="no"/>

      <Space
          android:layout_width="wrap_content"
          android:layout_height="10dp"/>

      <RadioGroup
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal">

        <RadioButton
            android:text="@string/left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/radioButtonLeft"
            android:checked="true"
            android:textColor="@color/White"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <RadioButton
            android:text="@string/right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/radioButtonRight"
            android:textColor="@color/White"
            android:textSize="18sp"
            android:textStyle="bold"/>

      </RadioGroup>

      <Space
          android:layout_width="wrap_content"
          android:layout_height="20dp"/>

      <Button
          android:text="@string/register"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/buttonRegister"
          android:background="@drawable/button"/>

      <Space
          android:layout_width="wrap_content"
          android:layout_height="10dp"/>

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="35dp"/>

  </LinearLayout>

</ScrollView>