<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".ChangePassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/logo_white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Update Profile"
            android:textColor="@color/White"
            android:textSize="20sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="7.5sp"
        android:background="@drawable/card2"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/container_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone" />

                <EditText
                    android:id="@+id/edit_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/old_password" />

                <EditText
                    android:id="@+id/old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:text="" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_password" />

                <EditText
                    android:id="@+id/new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:text="" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reenter_new_password" />

                <EditText
                    android:id="@+id/new_password_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_secondary_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_password_key" />

                <EditText
                    android:id="@+id/new_password_key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberPassword" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reenter_new_password_key" />

                <EditText
                    android:id="@+id/new_password_key_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberPassword"
                    android:text="" />
            </LinearLayout>

            <Button
                android:id="@+id/sumbit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/generic_sumbit" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>